# ERAL

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: PROMPT.md
examples/: _harness.ts  benchmark-demo.ts  calibration-demo.ts  ghost-publish.ts  linkedin-post.ts  notion-editor-ready.ts  playwright-live-demo.ts  registry-learning-demo.ts  simulate-interrupt-demo.ts  twin-capsule-demo.ts
rust/eral-core/: Cargo.toml  README.md
rust/eral-core/src/: lib.rs
scripts/: calibrate.ts  merge-twins.ts  postbuild.mjs
src/: calibration.ts  confidence.ts  engine.ts  feedback.ts  index.ts  playwright-driver.ts  registry.ts  server.ts  simulate.ts  types.ts
