[package]
name = "eral-core"
version = "1.0.0"
edition = "2021"
description = "ERAL confidence formula and ternary gating logic, compiled to WebAssembly for in-browser execution."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
